# bitlinear

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  bitlinear.py  build.sh  main.py  pyproject.toml  pytest.ini  scratch.py  setup.py  test.py  test_perf.py
csrc/: bitlinear.cpp
csrc/cpu/: bitlinear_cpu.cpp  ukernel.h
csrc/cuda/: bitlinear_cuda.cu  bitlinear_cuda.h
kernel/: bitlinear_cache_dot.cpp  bitlinear_cpu.cpp  bitlinear_cuda.cu  ukernel.cpp  ukernel.h
kernel/arm/: ukernel.cpp
kernel/x86/: ukernel.cpp
profile/: plot.py  profile.py  profile_cpu.json  profile_cuda.json  profile_results.json  test_perf.py
