[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=1.13.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitlinear"
version = "0.1.0"
description = "Efficient BitLinear implementation with CPU and CUDA support"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Oliver", email = "oliver@example.com"}
]
keywords = ["pytorch", "neural-networks", "quantization", "binary-networks", "cuda", "bitlinear"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/oliver/bitlinear"
Repository = "https://github.com/oliver/bitlinear"
Issues = "https://github.com/oliver/bitlinear/issues"

